tests/paczka1/small_fuzzy/52001041.err
Error in line 1: XKlDOv A678 4r,7
Error in line 4: XKlDOv S510 31,49
Error in line 12: XKlDOv S730 52,4
